@@ -1429,7 +1429,6 @@ A line ending with \ will be concatenated with the next one, so long lines
 
     <a name="retrycount"></a>
     <li>retrycount<br/>
-        Can be applied to FHT devices.<br/>
         If the <a href="#fhtsoftbuffer">fhtsoftbuffer</a> attribute is set, then
         resend commands <code>retrycount</code> times if after 240 seconds
         no confirmation message is received from the corresponding FHT
@@ -1438,7 +1437,6 @@ A line ending with \ will be concatenated with the next one, so long lines
 
     <a name="minfhtbuffer"></a>
     <li>minfhtbuffer<br/>
-        Can be applied to FHT devices.<br/>
         FHEM won't send commands to the FHZ if its fhtbuffer is below
         this value, default is 0. If this value is low, then the ordering of
         fht commands (see the note in the FHT section of <a href="#set">set</a>)
@@ -1449,11 +1447,17 @@ A line ending with \ will be concatenated with the next one, so long lines
 
     <a name="lazy"></a>
     <li>lazy<br/>
-        Can be applied to FHT devices.<br/>
         If the lazy attribute is set, FHEM won't send commands to the FHT if
         the current reading and the value to be set are already identical. This
         may help avoiding conflicts with the max-1%-time-on-air rule in large
         installations. Not set per default.
+        </li><br>
+
+    <a name="tmpcorr"></a>
+    <li>tmpcorr<br/>
+        Correct the temperature reported by the FHT by the value specified.
+        Note: only the measured-temp value reported by fhem (used for logging)
+        will be modified.
         </li>
   </ul>
   <br>
